--- a/AddressBookApp/AddressBookApp/Info.plist
+++ b/AddressBookApp/AddressBookApp/Info.plist
@@ -31,6 +31,8 @@
 			<key>UIWindowSceneSessionRoleApplication</key>
 			<array>
 				<dict>
+					<key>UISceneConfigurationName</key>
+					<string>Default Configuration</string>
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 				</dict>
